Fixed an error in CMicrostructure::segmentPixels that was causing problems in SnapRefine.
Also cleaned up the TransitionPointIterator class, although that wasn't the problem.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -10,6 +10,10 @@ OOF2 2.1.13
 * Removed a stray debugging line that was printing "No intersections
   on this element..."
 
+* Fixed a bug that was sometimes causing SnapRefine to create illegal
+  elements and also sometimes computing segment homogeneities
+  incorrectly.
+
 OOF2 2.1.12
 
 * Changed setup.py to allow C++11.
