Fixed a bug in FixIllegal.
Also added it to the regression test, since it hadn't been in there,
and the bug should have been caught.  Objects were being deleted
incorrectly from a Python set that probably used to be a dictionary.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -2,7 +2,9 @@ OOF2 2.1.14
 
 * Fixed a bug that could cause spurious error messages when solving
   time-dependent problems involving both thermal diffusion and
-  elasticity. 
+  elasticity.
+
+* Fixed a bug in Fix Illegal Elements.
 
 OOF2 2.1.13
 
