Fixed a homogeneity calculation affecting skeletons with illegal elements in debug mode.
Elements with legal shapes but with nodes outside the microstructure
were returning a null pointer to the area vector.  Recent changes to
CSkeletonElement::c_homogeneity had neglected this case.

Minor improvement to a loop in movenodeGUI.py.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -8,6 +8,9 @@ OOF2 2.1.14
 
 * Fixed a bug in Fix Illegal Elements.
 
+* Fixed a bug that caused crashes during illegal Skeleton node moves
+  in debug mode.
+
 OOF2 2.1.13
 
 * Changed the sign of the force balance equation so that the stiffness
