--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -13,6 +13,8 @@ OOF2 2.1.14
 
 * Fixed Copy_All_Solvers.
 
+* Fixed a bug that was causing OOF2 to fail to load when built with gcc 7.
+
 OOF2 2.1.13
 
 * Changed the sign of the force balance equation so that the stiffness
