Fixed a problem with images not displaying.
We weren't using ImageMagick routines correctly.  I don't know if
what we were doing used to be correct.  It's possible that ImageMagick
changed and we didn't notice.  This only seemed to affect Mac.

Images aren't being displayed on macOS when using quartz instead
of x11.  This appears to be a bug in gtk2.  Added a note to todo.txt
about upgrading to gtk3.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -1,3 +1,7 @@
+OOF2 2.1.15
+
+* Fixed a problem with displaying images on macOS in some situations.
+
 OOF2 2.1.14
 
 * Fixed a bug that could cause spurious error messages when solving
@@ -13,7 +17,8 @@ OOF2 2.1.14
 
 * Fixed Copy_All_Solvers.
 
-* Fixed a bug that was causing OOF2 to fail to load when built with gcc 7.
+* Fixed a bug that was causing OOF2 to fail to load when built with
+  gcc 7.
 
 OOF2 2.1.13
 
