Fixed bugs in Rationalize.
The RemoveBadTriangle Rationalizer was not setting parent/child
relationships for new segments when applying its triTriSplit
method on the boundary of a Skeleton with periodic boundary conditions.

Changed the way RemoveBadTriangle chooses the specific rationalizations
to apply.  It used to try all of them (splitting obtuse angles, collapsing
acute angles) if the element failed either the obtuse or acute angle tests.
Now it only tries the fixes relevant to the failed tests.

Changed the way ProvisionalChanges handles segment substitution
so that it doesn't create new SkeletonSegments until a change
is accepted.

Added progress bars for the long-form Skeleton sanity test.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -2,6 +2,9 @@ OOF2 2.1.17
 
 * Significant speed up of the element/pixel intersection code.
 
+* Fixed a bug in the Skeleton Rationalize method that could create bad
+  boundaries in periodic Skeletons.
+
 OOF2 2.1.16
 
 * New robust calculation of element/pixel intersection areas.
