More fiddling with the new statistical AutoGroup.  This version gets much better results and hardly crashes at all.
Instead of trying to do a Despeckle/Elkcepsed-like algorithm to  eliminate
stray pixels,   this version splits each group into connected pieces,
and eliminates the pieces that are smaller than minsize, simply by using
the previous minsize algorithm (merging the small groups into the most
similar adjacent large groups).

Not sure why it's crashing occasionally.

--- a/todo.txt
+++ b/todo.txt
@@ -22,3 +22,6 @@ Material property outputs
     C_ijkl in various reference frames
 Multiple outputs in one file, from Analysis page, not scheduled output.
     eg, x y stress strain orientation, all in one row
+
+PixelGroup buttons on MS page should be desensitized when MS is busy.
+This is an issue now that AutoGroup operations can take a long time.
