--- a/todo.txt
+++ b/todo.txt
@@ -25,3 +25,6 @@ Multiple outputs in one file, from Analysis page, not scheduled output.
 
 PixelGroup buttons on MS page should be desensitized when MS is busy.
 This is an issue now that AutoGroup operations can take a long time.
+
+Manual for statgroups. Tutorial section?
+
