--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,8 @@ in the code is insufficient for some reason.
 
 Add an OutputDestination that saves objects to a given Python array.
 
-Upgrade to gtk+3 and use libcairo instead of libgnomecanvas.
+Upgrade to gtk+3 and use libcairo instead of libgnomecanvas.  Will
+need to find or write a cairo based alternative to libgnomecanvas.
 
 Allow the Remove Material button in the Element Group operations pane
 on the Skeleton Selection page to remove the material from an element
@@ -19,7 +20,7 @@ expand as a whole.
 For Adam C.:
 Material property outputs
     Orientation at a point
-    C_ijkl in various reference frames
+    C_ijkl in various reference frames (+ other Property parameters)
 Multiple outputs in one file, from Analysis page, not scheduled output.
     eg, x y stress strain orientation, all in one row
 
@@ -27,4 +28,7 @@ PixelGroup buttons on MS page should be desensitized when MS is busy.
 This is an issue now that AutoGroup operations can take a long time.
 
 Manual for statgroups. Tutorial section?
+
+Is IndexType<> in engine/indextypes.h really necessary?  Is there any
+performance penalty?  
 
