Updating changelog to reflect ZStrain property addition.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -1,3 +1,7 @@
+
+* Added a "ZStrain" property so users can specify e_zz in
+  plane-strain problems.
+
 OOF2 2.1.19
 
 * Selection sizes are reported as percentages as well as absolute
