Copied a TODO from an otherwise obsolete and abandoned git branch (now deleted).

--- a/todo.txt
+++ b/todo.txt
@@ -37,3 +37,10 @@ Change functions that return pointers so that they return objects, if
 appropriate.
 
 Get rid of the distinction between Scalar and Aggregate Outputs, as in OOF3D. 
+
+Input into the console window should be saved in logs.  User defined
+constants and functions that are use in boundary conditions or
+initializers need to be saved. Also, non-command lines can be read
+from input scripts, and they should be saved too.  When reading from a
+script, should logging be done by the script reader, and not by the
+menu command?  Menu commands are only logged when executed by the gui?
