Fixed a couple of pixel selection bugs.
The Brush selector was being too aggressive in removing possibly
redundant points from the list of points to be processed.  Now it
just uses all the points.

The GenericSelectToolboxGUI was sometimes not including the mouse
up point in the list of points to be processed.  This may have been
due to a difference between gtk+2 and gtk3.

Also fixed a recently created bug which tried to set rubber band
parameters without checking that a rubber band existed.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -14,6 +14,9 @@ Other unreleased changes:
   confused about units and didn't work correctly unless the physical
   pixel size was 1x1.
 
+* Fixed the brush pixel selector, which was trying too hard to be
+  efficient and could miss points.
+
 OOF2 2.1.19
 
 * Selection sizes are reported as percentages as well as absolute
