--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -6,7 +6,17 @@ gtk3 changes, which may be in 2.1.20 or 2.2.0, depending...
 * The LayerEditor has been removed.  Canvas layers are created
   directly by menu items in the graphics window.
 
-* OOF.Graphics_1.File.Save_Image is now Save_Canvas.
+* OOF.Graphics_1.File.Save_Image is now Save_Canvas.  There is a new
+  OOF.Graphics_1.File.Save_Canvas_Region command that can save a
+  rectangular region.  When invoked from the GUI, its default
+  parameter values will save the visible part of the canvas.
+
+* The graphics window can be scrolled horizontally and vertically with
+  a scroll wheel (or two-finger swipe, or whatever the equivalent is
+  on your system).  The menu commands for scrolling the graphics
+  window (OOF.Graphics_x.Settings.Scroll.Horizontal and Vertical) have
+  been removed. The scrolling state of the grpahics window isn't
+  logged.
 
 Other unreleased changes:
 
