Reworked the python Color classes, along with their widget and parameter classes.
The translucent and opaque colors used to all be in the same
ConvertibleRegisteredClass, but it wasn't always appropriate to let
the user choose from both the translucent and opaque colors.  Now
there are two registered classes, TranslucentColor and OpaqueColor,
with corresponding Parameter classes.  Both kinds of colors have
RGB, HSV, and Gray varieties.

Some menu items had a color argument and a separate opacity argument.
Now they just have a TranslucentColor argument.

There is no longer a NewColorParameter.  Its widget displayed only
one color swatch, instead of an old color and a new color.  But every
parameter always has an old value, even if it was a default.

The ColorWidget subclasses don't repeat themselves so much anymore.
There had been a TODO about code reuse.  We still need a different
widget for translucent colors, because the current one doesn't
make the translucency evident.

Fixed some bugs in CColor.  Its operator< wasn't comparing the
alpha values, its operator= wasn't copying them, and its print
method wasn't printing them.

Changed the default setting for CanvasImage::drawPixelByPixel to
false, and made sure that OOF2 calls CanvasImage::setDrawIndividualPixels
every time it creates a CanvasImage.  This doesn't really belong
in the same commit as the above, but such is life.  This change was
useful while debugging the color stuff.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -18,6 +18,12 @@ gtk3 changes, which may be in 2.1.20 or 2.2.0, depending...
   been removed. The scrolling state of the grpahics window isn't
   logged.
 
+* Some commands that set colors used to have a separate opacity
+  parameter, which was confusing when the color also had an alpha
+  channel for the opacity.  Now there are no separate opacity
+  parameters, and all colors can be set to be translucent, except in a
+  few cases where it doesn't make sense.
+
 Other unreleased changes:
 
 * Fixed the square brush in the pixel selection toolbox, which was
