--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,9 @@ Add an OutputDestination that saves objects to a given Python array.
 
 Upgrade to gtk+3 and use libcairo instead of libgnomecanvas.  Will
 need to find or write a cairo based alternative to libgnomecanvas.
+  OrientationDisplay isn't working.  Is MicrostructureMaterialDisplay?
+  Mesh cross section toolbox isn't working.
+  SpiderRubberBand for node motion isn't working.  I think I moved its file.
 
 Allow the Remove Material button in the Element Group operations pane
 on the Skeleton Selection page to remove the material from an element
@@ -51,3 +54,6 @@ Add a Decoration WhoClass and DisplayMethods that can be used to put
 text or arbitrary shapes on the canvas.  Maybe allow the decorations
 to be moved around with the mouse.  That may be too much like writing
 our own graphics app.
+
+Complete or delete the interface branch.  It's not a git branch.  Most
+of the relevant code is inactive and commented with "Interface branch".
