Added a missing **kwargs and a TODO.

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,9 @@ OOF2 TODO
 This file is for high-priority or long-range TODOs for which a comment
 in the code is insufficient for some reason.
 
+Trying to save a region of the canvas when it's empty crashes the
+program.
+
 Add an OutputDestination that saves objects to a given Python array.
 
 Upgrade to gtk+3 and use libcairo instead of libgnomecanvas.  Will
