Fixed a bug in the BasicIterative matrix method.
BasicIterative was trying to use a matrix solver that was removed
when we switched to Eigen.

Also, changed a TOOD to a TODO.

--- a/SRC/changelog.txt
+++ b/SRC/changelog.txt
@@ -1,3 +1,7 @@
+OOF2 2.1.20
+
+* Fixed a bug in Basic solver mode, which was trying to use an old
+  solver for asymmetric matrices.
 
 OOF2 2.1.19
 
